refactored to use a file input. finally

--- a/.gitignore
+++ b/.gitignore
@@ -136,5 +136,5 @@ gradle-app.setting
 
 # End of https://www.gitignore.io/api/java,gradle,intellij
 .idea/modules/
-src/main/resources/output/
+src/main/resources/
 src/test/resources/
